# poli-gestion-transacciones

./: .dockerignore  .env.template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: commerces.py  health.py  transactions.py
app/core/: config.py  database.py  enums.py  exceptions.py
app/models/: __init__.py  commerce.py  transaction.py
app/repositories/: commerce_repository.py  transaction_repository.py
app/schemas/: commerce.py  transaction.py
app/services/: commerce_service.py  transaction_service.py
tests/: test_smoke.py
