[project]
name = "poli-gestion-transacciones-api"
version = "1.0.1"
description = "API de gestión de transacciones de pago (Materia de Integración Continua Poli Colombiano)."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
# B008: Depends() en argumentos por defecto es el patrón idiomático de FastAPI.
ignore = ["B008"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
